Fix intro animation - probably looks weird on mobile though.
FIx localisation rendering. Now just missing text strings in partner languages.

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -434,6 +434,16 @@ progress[value]::-webkit-progress-value {
   align-content: space-between;
 }
 
+.intro-animation {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+}
+
 /* Phone Screen */
 @media (max-width: 992px) {
   .fade-out {
